# Cogs

./: Cargo.toml  README.md
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: generate.rs  ir.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
examples/small_axum/: Cargo.toml  build.rs
examples/small_axum/cogs/: index.cog
examples/small_axum/src/: main.rs
examples/small_to_console/: Cargo.toml  build.rs
examples/small_to_console/cogs/: index.cog
examples/small_to_console/src/: main.rs
integrations/axum/: Cargo.toml
integrations/axum/src/: lib.rs
src/: diagnostics.rs  lib.rs  main.rs  tests.rs
src/snapshots/: cogs__tests__codegen@1.snap  cogs__tests__cogs@1.snap
tests/: 1.cog
